Primeros cambios entrega final

--- a/app/views/atuendos/index.html.erb
+++ b/app/views/atuendos/index.html.erb
@@ -1,5 +1,5 @@
 <div id="atuendos">
-  <div class="btn-go-back-guardarropa" ><a href="/guardarropas/<%=+params[:guardarropa_id]%>">Volver a Guardarropa</a></div>
+  <div class="btn-go-back-guardarropa" ><a href="/guardarropas/<%=+params[:guardarropa_id]%>"><i class="fa fa-arrow-left fa-3x" aria-hidden="true"></i></a></div>
   <h2 class="atuendos-title">Atuendos</h2>
   <div class="atuendos-filter">
     <div>
