--- a/app/assets/stylesheets/atuendos.scss
+++ b/app/assets/stylesheets/atuendos.scss
@@ -32,15 +32,9 @@ img {
 }
 .btn-go-back-guardarropa a{
   display: inline-block;
-  color: #FFFF;
-  background-color: #4e0d3a;
+  color: #4e0d3a;
   padding: 15px 20px ;
-  font-size: 10px;
-  text-transform: uppercase;
   margin: 5%;
-  text-align: center;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: bold;
 }
 
 .atuendos-title {
