--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,12 +1,16 @@
-<div>
-  <h2>Olvido de contraseña</h2>
+<%= stylesheet_link_tag "password_resets", :media => "all" %>
+
+<div id="reset-section">
+  <h2 class="reset-title">Olvido de contraseña</h2>
 <%=form_with url: password_reset_path do |form| %>
-  <div>
-    <%=form.label :email%>
-    <%= form.text_field :email, class: "", placeholder: "ejemplo@gmail.com"%>
+  <div class="reset-form">
+    <%=form.label :email, class: 'reset-items'%>
+    <%= form.text_field :email , class: 'reset-items' ,placeholder: "ejemplo@gmail.com"%>
   </div>
-    <div>
-      <%=form.submit "Enviar", class: ""%>
+    <div class="reset-buttons">
+      <%=form.submit "Enviar", class: "btn-reset"%>
     </div>
 <%end %>
 </div>
+
+
