--- a/app/assets/stylesheets/prendas.scss
+++ b/app/assets/stylesheets/prendas.scss
@@ -185,7 +185,7 @@ img {
   color: #FFFF;
   padding: 12px 5px;
   cursor: pointer;
-  background-color: #e30425;
+  background-color: #1414149d;
   font-family: 'Montserrat', sans-serif;
   font-size: 14px;
   margin-top: 25px;
@@ -218,7 +218,7 @@ img {
   color: #FFFF;
   padding: 12px 5px;
   cursor: pointer;
-  background-color: #e30425;
+  background-color: #1414149d;
   font-family: 'Montserrat', sans-serif;
   font-size: 14px;
   margin-top: 25px;
@@ -484,7 +484,6 @@ img {
     margin-left: 0px;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    float: right;
 
   }
 
