--- a/app/views/prendas/show.html.erb
+++ b/app/views/prendas/show.html.erb
@@ -22,7 +22,7 @@
     <%end %>
   </div>
 
-    <%= link_to "<button>Volver atrás</button>".html_safe, prendas_path(@prenda), class:'btn-return' %>
+    <%= link_to "<i class="fa fa-arrow-left fa-3x" aria-hidden="true"></i>".html_safe, prendas_path(@prenda), class:'btn-go-back-guardarropa' %>
 
 </div>
 
