--- a/app/assets/stylesheets/atuendos.scss
+++ b/app/assets/stylesheets/atuendos.scss
@@ -141,6 +141,7 @@ img {
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   border: medium solid #4e0d3a;
+  background-color: #FFF;
 }
 
 .atuendo-li-unit{
@@ -176,8 +177,8 @@ img {
 
 .btn-random{
   display: inline-block;
-  color: #4e0d3a;
-  background-color: #e30425;
+  color: #FFF;
+  background-color: #1414149d;
   padding: 15px 20px ;
   font-size: 15px;
   text-transform: uppercase;
@@ -242,13 +243,13 @@ img {
     color: #4e0d3a;
   }
 
-  .prendas-all-details-container{
+  //.prendas-all-details-container{
     //display: flex;
     //justify-content: space-around;
     //flex-direction: column;
     //margin: 0 12%;
 
-  }
+  //}
 
   .prendas-from-atuendos-container{
     margin: 3% 3%;
@@ -261,6 +262,7 @@ img {
 .btn-go-back-guardarropa a{
   font-size: 19px;
   margin: 3%;
+  margin-bottom: 0%;
 
 }
 .atuendos-title {
