--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,9 @@
 <div id="sign-up-section">
+  <div class="btn-go-back-signup">
+  <%= link_to fa_icon('arrow-left 3x'), '/' %>
+  </div>
   <h2 class="sign-up-title">Registrarme</h2>
   <%= render 'form', user: @user %>
-  <div class="back-link">
-    <%= link_to 'Volver atrás', users_path %>
-  </div>
 </div>
 
 
