--- a/app/views/atuendos/new.html.erb
+++ b/app/views/atuendos/new.html.erb
@@ -26,12 +26,14 @@
                   </div>
                 <% else %>
 
-                  <% @prendas_cabeza.each do |p| %>
-                    <%= f.radio_button :cabeza, p.id, required: true %>
-                    <%= render 'prenda', prenda: p %>
-                    <%= f.hidden_field :cabeza_id, :value => p.id %>
+                  <%#= f.select :cabeza_id, @prendas_cabeza.descripcion, {required:true, :prompt => "Seleccionar"} %>
 
-                  <%end%>
+                    <%# @prendas_cabeza.each do |p| %>
+                    <%#= f.radio_button :cabeza, p.id, required: true %>
+                    <%#= render 'prenda', prenda: p %>
+                    <%#= f.hidden_field :cabeza_id, :value => p.id %>
+
+                    <%#end%>
                 <%end%>
               </div>
               <div>
