--- a/app/views/guardarropas/index.html.erb
+++ b/app/views/guardarropas/index.html.erb
@@ -9,7 +9,7 @@
     </div>
     <ul class="guardarropas-all">
       <% if @guardarropas.blank?  %>
-          <i class="fa fa-meh-o"></i> <span class="text-center">No creaste ningún guardarropas todavía </span>
+          <span class="text-no-atuendo">No creaste ningún guardarropas todavía <i class="fa fa-meh-o"></i></span>
       <% else %>
         <% @guardarropas.each do |p| %>
           <li class="guardarropa-unit">
