Arreglado lo de recupero de password

--- a/app/assets/stylesheets/password_resets.scss
+++ b/app/assets/stylesheets/password_resets.scss
@@ -73,3 +73,11 @@ img {
   margin-top: 25px;
   width: 50%;
 }
+
+#alert{
+  color: #e30425;
+  font-weight: bold;
+  text-align: center;
+  font-size: 1.5em;
+  text-transform: uppercase;
+}
