--- a/app/views/password_mailer/reset.html.erb
+++ b/app/views/password_mailer/reset.html.erb
@@ -1,8 +1,7 @@
   <p>
-    Hola <%=params[:user].email %>,
-    Alguien pidio la recuperación de tu contraseña.
-
-    Si fuiste vos, hace click en el link para recuperar tu contraseña.
+    Hola <%=params[:user].email %>,<br>
+    Alguien pidio la recuperación de tu contraseña.<br>
+    Si fuiste vos, hace click en el link para recuperar tu contraseña.<br>
     El link vencerá en 15 minutos.
   </p>
   <div>
