Cambios de radio button a select

--- a/app/assets/stylesheets/guardarropas.scss
+++ b/app/assets/stylesheets/guardarropas.scss
@@ -50,7 +50,7 @@ img {
 
 .guardarropas-all {
   margin: 30px 20px;
-  display: flex;
+  //display: flex;
   justify-content: space-between;
   flex-direction: row;
   flex-wrap: wrap;
