--- a/app/assets/stylesheets/password_resets.scss
+++ b/app/assets/stylesheets/password_resets.scss
@@ -22,15 +22,18 @@ img {
   width: 100%;
 }
 
-#reset-section{
+.reset-form{
   background: white;
+}
+
+#reset-section{
+  display: flex;
   padding-bottom: 30px;
-  padding-top: 15px;
-  font-family: 'Barlow Semi Condensed', sans-serif;
-  margin-top: 0;
-  margin-bottom: 0;
   padding-right:13px;
   padding-left:13px;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Barlow Semi Condensed', sans-serif;
 }
 
 .reset-title{
@@ -40,19 +43,23 @@ img {
   font-size: 3em;
   font-weight: bold;
   text-align: center;
-  margin-top: 15px;
-  padding-top: 40px;
+  margin-top: 0;
+  padding-top: 0;
 }
-
+.reset-text{
+  font-size: 18px;
+  color: #4e0d3a;
+  text-transform: capitalize;
+  font-weight: bold;
+}
 .reset-items{
-  width: 100%;
   margin-bottom: 9px;
   padding: 15px;
   box-sizing: border-box;
   outline: none;
   font-family: 'Roboto', sans-serif;
   position: relative;
-
+  width: 320px;
 }
 
 .reset-buttons{
@@ -71,7 +78,7 @@ img {
   background-color:rgb(243,199,214) ;
   font-family: 'Montserrat', sans-serif;
   margin-top: 25px;
-  width: 50%;
+  width: 200px;
 }
 
 #alert{
@@ -80,4 +87,25 @@ img {
   text-align: center;
   font-size: 1.5em;
   text-transform: uppercase;
+}
+
+@media(min-width:650px) {
+  .reset-text{
+    font-size: 22px;
+  }
+  .reset-items{
+    width: 600px;
+  }
+}
+
+@media(min-width:1200px) {
+  .reset-text{
+    font-size: 25px;
+  }
+  .reset-items{
+    width: 900px;
+  }
+  .btn-reset{
+    font-size: 20px;
+  }
 }
