--- a/app/assets/stylesheets/prendas.scss
+++ b/app/assets/stylesheets/prendas.scss
@@ -94,6 +94,11 @@ img {
   font-weight: bold;
 }
 
+.new_prenda{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 
 #create-item {
@@ -131,7 +136,7 @@ img {
   outline: none;
   font-family: 'Roboto', sans-serif;
   position: relative;
-
+  max-width: 300px;
 }
 
 .form-items-title{
@@ -190,6 +195,7 @@ img {
   font-size: 14px;
   margin-top: 25px;
   width: 100px;
+  margin-left: 20px
 }
 
 .edit-form-submit-buttons{
@@ -341,6 +347,11 @@ img {
 
   }
 
+  .form-items {
+    font-size: 20px;
+    max-width: 600px;
+  }
+
   .new-item-btn{
    margin:auto 42%;
   }
@@ -396,6 +407,11 @@ img {
     justify-content:space-around;
     display:flex;
     flex-flow:row wrap;
+  }
+
+  .form-items {
+    font-size: 22px;
+    max-width: 1500px;
   }
 
   .prendas-title{
